--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ dill==0.3.6
 distlib==0.3.6
 distributed==2021.11.2
 entrypoints==0.4
+et-xmlfile==1.1.0
 evaluate==0.2.2
 executing==1.2.0
 fairscale==0.4.6
@@ -129,6 +130,7 @@ omegaconf==2.1.2
 opencv-python==4.6.0.66
 opencv-python-headless==4.6.0.66
 openmim==0.2.1
+openpyxl==3.0.10
 ordered-set==4.1.0
 packaging==21.3
 pandas==1.5.1
