--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.0.4
+click-plugins==1.1.1
+cligj==0.7.2
 cloudpickle==2.2.0
 colorama==0.4.6
 commonmark==0.9.1
@@ -64,10 +66,12 @@ fastdownload==0.0.7
 fastjsonschema==2.16.2
 fastprogress==1.0.3
 filelock==3.8.0
+Fiona==1.8.22
 fonttools==4.38.0
 frozenlist==1.3.3
 fsspec==2022.11.0
 future==0.18.2
+geopandas==0.12.1
 gluoncv==0.10.5.post0
 gluonts==0.11.3
 google-auth==2.15.0
@@ -111,6 +115,7 @@ model-index==0.1.11
 msgpack==1.0.4
 multidict==6.0.3
 multiprocess==0.70.14
+munch==2.5.0
 murmurhash==1.0.9
 nbclassic==0.4.8
 nbclient==0.7.0
@@ -144,6 +149,7 @@ pickleshare==0.7.5
 Pillow==9.0.1
 platformdirs==2.5.4
 plotly==5.11.0
+plotly-geo==1.0.0
 pmdarima==1.8.5
 portalocker==2.6.0
 ppscore==1.3.0
@@ -164,7 +170,9 @@ pydantic==1.10.2
 pyDeprecate==0.3.2
 Pygments==2.13.0
 pyparsing==3.0.9
+pyproj==3.4.0
 pyrsistent==0.19.2
+pyshp==2.3.1
 python-dateutil==2.8.2
 pytorch-lightning==1.7.7
 pytorch-metric-learning==1.3.2
@@ -190,6 +198,7 @@ seaborn==0.12.1
 Send2Trash==1.8.0
 sentencepiece==0.1.97
 seqeval==1.2.2
+Shapely==1.8.5.post1
 six==1.16.0
 sktime==0.13.4
 smart-open==5.2.1
